# trading-records

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Performance.csv  README.md  design-doc-final.md  docker-compose.yml  package-lock.json  pyproject.toml  skills-lock.json  test_spike_filter.py
backend/: auth.py  config.py  database.py  logging_config.py  main.py
backend/api/: analytics.py  config.py  dependencies.py  groups.py  health.py  imports.py  market_data.py  trades.py
backend/api/v1/: __init__.py
backend/config/: __init__.py  base.py  environments.py  loader.py
backend/exceptions/: __init__.py  base.py  handlers.py
backend/ingestion/: base.py  csv_importer.py  ibkr_flex.py  normalizer.py  pipeline.py  tradovate.py  validator.py
backend/ingestion/sources/: __init__.py  base.py  csv_source.py  flex_query_source.py  tradovate_source.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_daily_summaries_view.py  003_fix_daily_summaries_win_loss.py  004_add_multiplier_and_fix_pnl.py  005_fix_daily_summaries_use_realized_pnl.py  006_ohlcv_cache.py  (+7 more)
backend/models/: __init__.py  import_log.py  ohlcv_cache.py  trade.py  trade_group.py
backend/schemas/: analytics.py  chart.py  config.py  import_result.py  trade.py
backend/services/: __init__.py  analytics.py  analytics_registry.py  analytics_service.py  analytics_views.py  import_service.py  market_data.py  scheduler.py  trade_grouper.py  trade_service.py
backend/utils/: __init__.py  db.py  symbol.py
chats/2026-02-18/: 1-design-review-trading-records-system.md  2-revise-design-doc-with-review-recommendations.md  3-implement-trading-records-system-phase-1-and-2.md
config/: config.example.yaml
docs/: ANALYTICS_REFACTOR_PLAN.md  REFACTOR_PLAN.md  code-review-report.md  competitor-feature-gap-priority.md  design-doc.md  design-market-data-providers.md  frontend-optimization-plan.md  kline-chart-trade-markers-plan.md  postgres-optimization.md  refactoring-abstraction-best-practices.md  refactoring-abstraction-plan.md  research-report.md  review-report.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: test-tradovate-api.ts
tests/: conftest.py  test_analytics_contract.py  test_analytics_dispatcher.py  test_analytics_registry.py  test_config.py  test_csv_importer.py  test_dedup.py  test_dependencies.py  test_exceptions.py  test_ibkr_flex.py  test_market_data.py  test_normalizer.py  test_pipeline.py  test_refactored_helpers.py  test_services.py  test_trade_grouper.py  test_tradovate.py  test_tradovate_perf_csv.py  test_validator.py
tests/fixtures/: ibkr_activity.csv  ibkr_activity_no_trades.csv  ibkr_flex_empty.xml  ibkr_flex_malformed.xml  ibkr_flex_sample.xml  tradovate_auth_response.json  tradovate_contracts.json  tradovate_export.csv  tradovate_fills.json  tradovate_performance.csv
tests/test_api/: test_analytics.py  test_auth.py  test_config.py  test_group_chart.py  test_groups.py  test_health.py  test_imports.py  test_trades.py
tests/test_providers/: test_chart_endpoint.py  test_databento_provider.py  test_ohlcv_cache.py  test_rate_limit.py  test_tiingo_provider.py  test_validation.py
(+54 files in other folders)
