[project]
name = "trading-records"
version = "0.1.0"
description = "Self-hosted trading records system for IBKR and Tradovate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "testcontainers[postgres]>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
